# arkpz-pzpi-22-6-holovashenko-illia

./: LICENSE  README.md
Pract1/: arkpz-pzpi-22-6-holovashenko-illia-pract1.txt
Pract1/arkpz-pzpi-22-6-holovashenko-illia-pract1/: code-examples-pract1.txt
Pract2/: arkpz-pzpi-22-6-holovashenko-illia-pract2.txt
Pract2/arkpz-pzpi-22-6-holovashenko-illia-pract2/: code-examples-pract2.txt
Task1/: arkpz-pzpi-22-6-holovashenko-illia-task1.txt
Task2/: arkpz-pzpi-22-6-holovashenko-illia-task2.txt
Task2/arkpz-pzpi-22-6-holovashenko-illia-task2/: pom.xml
Task2/arkpz-pzpi-22-6-holovashenko-illia-task2/src/main/java/ua/nure/arkpz/task2/flameguard/config/: WebSecurityConfig.java
Task2/arkpz-pzpi-22-6-holovashenko-illia-task2/src/main/java/ua/nure/arkpz/task2/flameguard/controller/: AddressController.java  AlarmController.java  BuildingController.java  MaintenanceController.java  MeasurementController.java  SensorController.java  UserAccountController.java
Task2/arkpz-pzpi-22-6-holovashenko-illia-task2/src/main/java/ua/nure/arkpz/task2/flameguard/dto/: BuildingDto.java  PaymentDto.java  SensorDto.java
Task2/arkpz-pzpi-22-6-holovashenko-illia-task2/src/main/java/ua/nure/arkpz/task2/flameguard/entity/: Address.java  Alarm.java  Building.java  Maintenance.java  Measurement.java  Payment.java  Sensor.java  UserAccount.java
Task2/arkpz-pzpi-22-6-holovashenko-illia-task2/src/main/java/ua/nure/arkpz/task2/flameguard/repository/: AddressRepository.java  AlarmRepository.java  BuildingRepository.java  MaintenanceRepository.java  MeasurementRepository.java  PaymentRepository.java  SensorRepository.java
Task2/arkpz-pzpi-22-6-holovashenko-illia-task2/src/main/java/ua/nure/arkpz/task2/flameguard/service/: AddressService.java  AlarmService.java  BuildingService.java  MaintenanceService.java  MeasurementService.java  PaymentService.java  SensorService.java  UserAccountService.java
Task2/arkpz-pzpi-22-6-holovashenko-illia-task2/src/main/java/ua/nure/arkpz/task2/flameguard/util/: JWTAuthenticationFilter.java
Task3/: arkpz-pzpi-22-6-holovashenko-illia-task3.txt
Task3/arkpz-pzpi-22-6-holovashenko-illia-task3/: pom.xml
Task3/arkpz-pzpi-22-6-holovashenko-illia-task3/src/main/java/ua/nure/arkpz/task2/flameguard/: FlameGuardApplication.java
Task3/arkpz-pzpi-22-6-holovashenko-illia-task3/src/main/resources/: application.properties
Task4/: arkpz-pzpi-22-6-holovashenko-illia-task4.txt
Task4/arkpz-pzpi-22-6-holovashenko-illia-task4/: CMakeLists.txt  config.json  main.cpp
Task4/arkpz-pzpi-22-6-holovashenko-illia-task4/include/: buildings.h  config.h  mqtt_client.h  sensors.h  utils.h
Task4/arkpz-pzpi-22-6-holovashenko-illia-task4/src/: buildings.cpp  config.cpp  mqtt_client.cpp  sensors.cpp  utils.cpp
Task5/: arkpz-pzpi-22-6-holovashenko-illia-task5.txt
Task5/arkpz-pzpi-22-6-holovashenko-illia-task5/: pom.xml
Task5/arkpz-pzpi-22-6-holovashenko-illia-task5/src/main/java/ua/nure/arkpz/task2/flameguard/: FlameGuardApplication.java
Task5/arkpz-pzpi-22-6-holovashenko-illia-task5/src/main/resources/: application.properties
Task5/arkpz-pzpi-22-6-holovashenko-illia-task5/src/test/java/ua/nure/arkpz/task2/flameguard/: FlameGuardApplicationTests.java
(+76 files in other folders)
